add search bar component

--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,6 +1,8 @@
-<mat-toolbar color="primary" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
-  <a href="javascript.void()" routerLink="['']" class="title">Asset Register</a>
-  <span fxFlex="2"></span>
-  <button mat-button>Test 1</button>
+<mat-toolbar color="primary" class="mat-elevation-z4" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+  <button mat-button class="title">Asset Register</button>
+  <span fxFlex></span>
+  <app-search-bar></app-search-bar>
+  <span fxFlex></span>
+  <button mat-button class="toolbar-button">Create New Asset</button>
   <button mat-button>Test 2</button>
 </mat-toolbar>
