--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -2,7 +2,7 @@
   <mat-form-field appearance="standard" class="search-bar">
     <input matInput placeholder="e.g. cc204976" class="search-text" />
   </mat-form-field>
-  <button mat-icon-button>
+  <button mat-icon-button [routerLink]="['search']">
     <mat-icon>search</mat-icon>
   </button>
 </div>
