--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z4" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+<mat-toolbar color="primary" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
   <button mat-button class="title">Asset Register</button>
   <span fxFlex></span>
   <app-search-bar></app-search-bar>
