--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -3,7 +3,7 @@
   <span fxFlex></span>
 </div>
 
-<div fxLayout="column" fxLayoutAlign="start center" fxFill class="ar-pad-20">
+<div fxLayout="column" fxLayoutAlign="start center" class="ar-pad-20">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
     <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
