--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
-  <button mat-button class="title">Asset Register</button>
+  <button mat-button class="title" [routerLink]="['/']">Asset Register</button>
   <span fxFlex></span>
   <app-search-bar></app-search-bar>
   <span fxFlex></span>
-  <button mat-button class="toolbar-button">Create New Asset</button>
+  <button mat-button class="toolbar-button">Create New Staff/Asset</button>
   <button mat-button>Test 2</button>
 </mat-toolbar>
