--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -3,6 +3,7 @@
   <span fxFlex></span>
   <app-search-bar></app-search-bar>
   <span fxFlex></span>
-  <button mat-button class="toolbar-button">Create New Staff/Asset</button>
-  <button mat-button>Test 2</button>
+  <button mat-button class="toolbar-button">Create New Asset</button>
+  <button mat-button class="toolbar-button">Create New Asset/Staff</button>
+  <button mat-button class="toolbar-button">Maintain Models</button>
 </mat-toolbar>
